XMLtoCSV/objects/unpackaged/objects/Territory_Budget_vod__c.object
<CustomObject>
    <description>Extensible object that supports Budget Management processes. Budgets can be linked to a territory, to a product or standalone.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this flag allows that Transactions can be created against this Budget.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Quantity_vod__c</fullName>
        <description>The current quantity of the Budget. Starting from the start quantiyty, every transaction changes this value.</description>
        <label>Current Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value_vod__c</fullName>
        <description>The current value of the Budget. Starting from the start value, every transaction changes this value.</description>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>This field can be used for a more detailed description of the budget.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>The end date of the Budget.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_vod__c</fullName>
        <description>The date of the last Transaction that has been booked against this Budget.</description>
        <label>Last Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field allows the linking of a Budget to a specific product.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Territory Budgets</relationshipLabel>
        <relationshipName>Territory_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>The start date of the Budget.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Quantity_vod__c</fullName>
        <description>The start quantity of the Budget. Example are numbers of seats at a congress, etc. This value can only be set on the creation of a new Territory Budget record.</description>
        <label>Start Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Value_vod__c</fullName>
        <description>The monetary start value of the Budget. This value can only be set on the creation of a new Territory Budget record.</description>
        <label>Start Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>This field describes the current status of the budget within the organization. Customers can add/edit the values to match their needs.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>This field allows the linking of a Budget to a specific territory.</description>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The Budget Type helps in structuring Budgets. Customers can add/edit the values to match their needs.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Territory Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VEEVA_DATES_CHECK</fullName>
        <active>true</active>
        <description>This validation rule ensures that the Start Date always falls before the End Date.</description>
        <errorConditionFormula>Start_Date_vod__c &gt;  End_Date_vod__c</errorConditionFormula>
        <errorMessage>Start date cannot be after end date</errorMessage>
    </validationRules>
</CustomObject>